@@ -1,1 +1,1 @@
-EXTRA_DIST = mysql.m4 pgsql.m4 tcl.m4 unicode.m4
+EXTRA_DIST = mysql.m4 pam.m4 pgsql.m4 tcl.m4 unicode.m4
