@@ -21,6 +21,7 @@ AM_CONFIG_HEADER([config.h])
 
 dnl helper macros
 sinclude(ac-helpers/mysql.m4)
+sinclude(ac-helpers/pam.m4)
 sinclude(ac-helpers/pgsql.m4)
 sinclude(ac-helpers/tcl.m4)
 sinclude(ac-helpers/unicode.m4)
@@ -94,6 +95,7 @@ AC_CHECK_LIB(dl, dlopen,DL_FLAGS="-ldl",)
 AC_CHECK_LIB(crypt, crypt,CRYPT_FLAGS="-lcrypt",)
 ACX_PTHREAD(,exit 1)
 
+WZD_LIB_PAM
 WZD_LIB_MYSQL
 WZD_LIB_PGSQL
 WZD_LIB_TCL
@@ -222,6 +224,7 @@ AH_TEMPLATE([HAVE_STRTOULL],
             [System has the strtoull function.])
 
 AM_CONDITIONAL([HAVE_MYSQL], [test "$wzd_have_mysql" = "yes"])
+AM_CONDITIONAL([HAVE_PAM], [test "$wzd_have_pam" = "yes"])
 AM_CONDITIONAL([HAVE_TCL], [test "$wzd_have_tcl" = "yes"])
 
 WZD_BUILD_NUM="`date +\"%Y%m%d\"`"
@@ -272,6 +275,7 @@ AC_CONFIG_FILES([Makefile
                  backends/Makefile
                  backends/plaintext/Makefile
                  backends/mysql/Makefile
+                 backends/pam/Makefile
 		 init.d/Makefile
                  init.d/wzdftpd
                  modules/Makefile
